--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_jpa
 spring.datasource.username=root
 spring.datasource.password=root
@@ -6,5 +6,5 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type=TRACE
